--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>
         Cordel Moderno            
         </h1>
-        <h3>Por <a href="#" target="_blank">Milton Duarte</a></h3>
+        <h3>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></h3>
     </header>
     <main>
         <section class="cordel">
@@ -94,7 +94,7 @@
         </section>
     </main>
     <footer>
-        <p>Site ciado pro <a href="#" target="_blank">João Lucas</a> para o <a href="https://github.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
+        <p>Site ciado pro <a href="https://github.com/joaolucas3002" target="_blank">João Lucas</a> para o <a href="https://github.com/cursoemvideo" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
