--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </section>
         <section class="cordel">
             <p>
-                Não é mais como era antes <br>
-                É tudo abreviado <br>
-                "Você" só tem duas letras <br>
-                O "O" e o "E" foi riscado <br>
-                Para declarar o amor <br>
-                Basta botar uma flor <br>
-                E um coração desenhado. <br>
+                Arroba agora não pesa <br>
+                É parte de um endereço <br>
+                Ponto final nem se usa <br>
+                Ou vai até no começo <br>
+                Agora é .com <br>
+                Se o saite é muito bom <br>
+                Ele vale um alto preço. <br>
             </p>
         </section>
         <section class="cordel">
